Set Icon For Setup Project

--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/AuthenticationWindow.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/AuthenticationWindow.xaml
@@ -11,7 +11,8 @@
         ResizeMode="NoResize"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
-        AllowsTransparency="True">
+        AllowsTransparency="True"
+        Icon="../../Images/icon.ico">
     <Window.DataContext>
         <viewModel:AuthenticationViewModel/>
     </Window.DataContext>
