--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderManagementView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderManagementView.xaml
@@ -146,7 +146,7 @@
                     BorderBrush="LightGray" 
                     Margin="16">
 
-                    <DataGrid Grid.Row="10" x:Name="OrderDataGrid"
+                    <DataGrid x:Name="OrderDataGrid"
                               GridLinesVisibility="None" 
                               SelectedItem="{Binding SelectedOrder}"
                               HorizontalAlignment="Center" Margin="12" BorderThickness="0" 
