--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/CategoryDetailView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/CategoryDetailView.xaml
@@ -44,7 +44,7 @@
                                 </Rectangle>
                             </Canvas>
 
-                            <TextBlock Text="Create New Category"
+                            <TextBlock Text="Change Category Name"
                                FontSize="18" FontWeight="DemiBold"
                                Margin="0 0 0 0" DockPanel.Dock="Top"/>
                             <WrapPanel DockPanel.Dock="Bottom" Orientation="Vertical">
